# video-toolbox

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CLEANUP_COMPLETE.md  CLOUD_SERVICE_INTEGRATION.md  GITHUB_ACTIONS_SETUP.md  GITHUB_RELEASES_GUIDE.md  INFRASTRUCTURE_COMPLETE.md  README.md  REALTIME_SETUP.md  RELEASE_GUIDE.md  UI_INTEGRATION_COMPLETE.md  UPDATER_GUIDE.md  check-supabase.js  package.json  pnpm-lock.yaml  update-manifest.json  vite.config.ts
.github/workflows/: release.yml
docs/: add-account-feature.md  notification-usage.md  plugin-system-investigation.md  requirements.md  tauri-commands-todo.md
docs/development/: CODE_REVIEW.md  GUIDELINES.md  SETUP.md
docs/tasks/: 06-sidecar.md  07-service-layer.md  08-pinia-stores.md  09-vueuse.md  10-concurrency.md  11-components.md
python-backend/: BUILD.md  bitbrowser.py  bitbrowser_api.py  build_sidecar.ps1  build_sidecar.sh  requirements.txt
resources/browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
scripts/: README.txt  build-and-release.ps1  generate-update-key.js  release.bat  upload-update-interactive.bat  upload-update-manifest.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/nsis/: installer.nsh
src-tauri/src/: bitbrowser_detector.rs  bitbrowser_launcher.rs  bitbrowser_manager.rs  bitbrowser_monitor.rs  bitbrowser_sidecar.rs  config_manager.rs  main.rs
src/composables/: index.ts  useAddAccount.ts  useAsync.ts  useClipboard.ts  (+7 more)
(+94 files in other folders)
