[package]
name = "video-toolbox-tauri"
version = "1.1.3"
description = "瑙嗛鍙峰伐鍏风"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "fs-all", "path-all", "updater"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sysinfo = "0.30"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
qrcode = "0.13"
image = "0.24"
base64 = "0.21"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]





